welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: value || is not a member of Int
		if ( ab = 10 + bc || ab = 10 + ac) {
                                  ^blueTicket:10: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( ab = 10 + bc || ab = 10 + ac) {
                        ^